# EXACT

./: .gitignore  15-15-aime-2026-i-120b-in-20mins.ipynb  README.md  pyproject.toml
configs/: colab_unsloth_no_tool.json  colab_unsloth_tool_always.json  exact_2026.json  qwen3_5_4b_lora.json  qwen3_5_4b_no_tool_lora.json  qwen3_5_4b_tool_always_lora.json
data/examples/: logic.jsonl  logic_request.json  physics.jsonl  physics_request.json
docs/: layout.md
scripts/: audit_physics_tool_coverage.py  build_no_tool_manifest.sh  build_tool_always_manifest.sh  export_manifest.py  export_tool_call_manifest.py  infer_no_tool_samples.sh  infer_tool_always_samples.sh  inspect_manifest.py  merge_manifests.py  train_no_tool_qwen3_5_4b.sh  train_qwen3_5_4b.sh  train_tool_always_qwen3_5_4b.sh  train_unsloth_colab_no_tool.sh  train_unsloth_colab_tool_always.sh  train_unsloth_no_tool_qwen3_5_4b.sh  train_unsloth_tool_always_qwen3_5_4b.sh
src/exact/: __init__.py  api.py  data.py  infer.py  infer_adapter_from_manifest.py  logic.py  physics.py  prompts.py  schema.py  tokenization.py  tool_call_data.py  train_from_manifest.py  train_unsloth_from_manifest.py
src/exact/tools/: __init__.py  python_tool.py
tests/: test_data.py  test_physics.py  test_python_tool.py  test_tokenization.py  test_tool_call_data.py
